# Acropolis

./: .gitignore  Dockerfile  FIXES.txt  HOW_TO_MANUAL.md  README.md  deny.toml
.bak/: README-bak.md  agent.rs  julia_bridge.rs  lib.rs  main.rs  main_rl.rs  memory-bak.rs  memory.rs  orchestrator.rs  plugin.rs  tree.txt
.bak/julia-bak/: train_causal.jl  train_clip.jl  train_ltn.jl
.github/workflows/: codacy.yml  rust-clippy.yml  rust.yml  security.yml
adaptive_expert_platform/: Cargo.toml
adaptive_expert_platform/src/: agent.rs  auth.rs  batch.rs  cache.rs  cli.rs  ffi_julia.rs  ffi_zig.rs  lib.rs  lifecycle.rs  main.rs  mesh.rs  middleware.rs  monitoring.rs  orchestrator.rs  plugin.rs  server.rs  settings.rs  telemetry.rs  wasm_plugin.rs  websocket.rs
adaptive_expert_platform/src/memory/: mod.rs  redis_store.rs
adaptive_expert_platform/tests/: basic_agent_test.rs
models/python/: pptx_to_img.py
plugins/dqn_plugin/src/: lib.rs
plugins/julia_plugin/: Cargo.toml
plugins/julia_plugin/src/: lib.rs
plugins/uppercase_plugin/src/: lib.rs
