[package]
name = "adaptive_expert_platform"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "adaptive_expert_platform"
path = "src/lib.rs"

[[bin]]
name = "acropolis-cli"
path = "src/main.rs"

[dependencies]
# Core async runtime and utilities
tokio = { version = "1.37", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "process",
  "sync",
  "signal",
] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP server framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "env-filter",
  "json",
] }
tracing-opentelemetry = { version = "0.22", optional = true }
opentelemetry = { version = "0.21", optional = true }
opentelemetry-otlp = { version = "0.14", optional = true }

# Security dependencies
sha2 = "0.10"
regex = "1.10"
blake3 = "1.5"
jsonwebtoken = "9.2"
argon2 = "0.5"
governor = "0.6"
chrono = { version = "0.4", features = ["serde"] }

# Configuration and settings
config = "0.14"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"

# File system operations and monitoring
notify = "6.1"
tempfile = "3.8"

# Plugin and FFI support
libloading = "0.8"
once_cell = "1.19"

# Memory management and async utilities
async-trait = "0.1"
futures = "0.3"

# Serialization
bincode = "1.3"

# Julia FFI (optional)
jlrs = { version = "0.20", optional = true }

# Optional engines / back-ends
llama_cpp = { version = "0.3", optional = true }
wasmtime = { version = "19.0", optional = true, features = ["component-model"] }
redis = { version = "0.25", optional = true }
bb8 = { version = "0.8", optional = true }
bb8-redis = { version = "0.14", optional = true }

[dev-dependencies]
# Testing infrastructure
tokio-test = "0.4"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tracing-test = "0.2"
futures = "0.3"

[features]
# Default build includes basic features (removed problematic dependencies for now)
default = []

# Each optional dependency must appear inside some feature list
with-llama = ["dep:llama_cpp"]
with-wasm = ["dep:wasmtime"]
with-redis = ["dep:redis", "dep:bb8", "dep:bb8-redis"]
with-julia = ["dep:jlrs"]
with-zig = []
with-observability = [
  "dep:opentelemetry",
  "dep:tracing-opentelemetry",
  "dep:opentelemetry-otlp",
]
